connect css to html.

--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href= "./style.css" type="text/css" rel="stylesheet">
+    <link href="./style.css" type="text/css" rel="stylesheet">
     <meta charset="utf-8">
     <title>My Times</title>
   </head>
   <body>
+    <!--- header --->
     <div class="header">
       <div class="container">
         <h1>My Times</h1>
-    <ul>
-      <li><a href="#world">World</a></li>
-      <li><a href="#u.s.">U.S.</a></li>
-      <li><a href="#tech">Tech</a></li>
-      <li><a href="#science">Science</a></li>
-    </ul>
+        <ul>
+          <li><a href="#world">World</a></li>
+          <li><a href="#u.s.">U.S.</a></li>
+          <li><a href="#tech">Tech</a></li>
+          <li><a href="#science">Science</a></li>
+      </ul>
+    </div>
   </div>
-</div>
 
 
 
