--- a/index.html
+++ b/index.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <html>
-  <head>    
+  <head>
     <meta charset="utf-8">
     <title>My Times</title>
     <link href="./style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <!--- header --->
-    <div class="header">
-      <div class="container">
-        <h1>My Times</h1>
-        <ul>
-          <li><a href="#world">World</a></li>
-          <li><a href="#u.s.">U.S.</a></li>
-          <li><a href="#tech">Tech</a></li>
-          <li><a href="#science">Science</a></li>
-      </ul>
-    </div>
-  </div>
-
-
-
-  </body>
+    <!-- Header section -->
+    <header>
+    <div class="logo">
+      <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg">
+        <span>My Times</span>
+      </div>
+        <nav>
+          <span>
+            <a href="#">World</a>
+          </span>
+          <span>
+            <a href="#">U.S.</a>
+          </span>
+          <span>
+            <a href="#">Tech</a>
+          </span>
+          <span>
+            <a href="#">Science</a>
+          </span>
+        </nav>
+      </header>
+    </body>
 </html>
